--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Title</title>
-</head>
+{% extends 'base.html' %}
+{% block title %}
+  <title>Войти</title>
+{% endblock %}
+
+
+{% block body %}
+
 <body>
 <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin">
@@ -19,11 +20,18 @@
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+      <p class="mt-5 mb-3 text-muted">© 2025</p>
     </form>
 
 
 <div id="c4g-content-root" class="c4g-widget"></div></body>
 </body>
-</html>
+
+{% endblock %}
+
+
+
+
+
+
