--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,22 @@
         {% block title %} {% endblock title %}
     </head>
 <body>
+<!-- Navigation-->
+       <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal" >App shop</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Главная</a>
+        <a class="p-2 text-dark" href="/item">Товар</a>
+
+      </nav>
+      <a class="btn btn-outline-primary" href="/signin">Войти</a>
+    </div>
+
  {% block body %} {% endblock body %}
+
+<!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2025</p></div>
+        </footer>
 </body>
 </html>
