--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,7 +7,8 @@
 {% block body %}
 
 <body>
-<body class="text-center" cz-shortcut-listen="true">
+<div class="container">
+  <body class="text-center"cz-shortcut-listen="true">
     <form class="form-signin">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
@@ -25,8 +26,10 @@
     </form>
 
 
-<div id="c4g-content-root" class="c4g-widget"></div></body>
 </body>
+</div>
+
+
 
 {% endblock %}
 
