--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,14 @@
 {% block title %}
   <title>Shop</title>
 {% endblock %}
-
+{% block h1 %} <h1 class="display-4 fw-bolder">Магазин</h1> {% endblock h1 %}
+{% block p %} <p class="lead fw-normal text-white-50 mb-0">Текст о стр магазин</p>{% endblock p %}
 
 {% block body %}
 
   <body>
 
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                </div>
-            </div>
-        </header>
+
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
