--- a/templates/item-product.html
+++ b/templates/item-product.html
@@ -3,7 +3,8 @@
   <title>Продукт</title>
 {% endblock %}
 
-
+{% block h1 %} <h1 class="display-4 fw-bolder">Товар</h1> {% endblock h1 %}
+{% block p %} <p class="lead fw-normal text-white-50 mb-0">Текст о стр товар</p>{% endblock p %}
 {% block body %}
 
 <body>
