--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,13 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">Главная</a>
         <a class="p-2 text-dark" href="/item">Товар</a>
+          <a class="btn btn-outline-primary" href="/create">Добавить товар</a>
 
       </nav>
       <a class="btn btn-outline-primary" href="/signin">Войти</a>
+
+    </nav>
+
     </div>
 
 <!-- Header-->
