--- a/templates/create.html
+++ b/templates/create.html
@@ -8,7 +8,16 @@
 
 {% block body %}
 
-<br>
+<div class="container">
+  <h1>Добавления</h1>
+  <form method="POST">
+
+    <input type="text" class="form-control" name="title"  id="title" placeholder="Название товара"><br>
+    <input type="number" class="form-control" name="price"  id="price" placeholder="Цена товара"><br>
+    <button class="btn btn-success" type="submit">Добавить товар</button><br>
+
+  </form>
+</div>
 
 
 {% endblock %}
