--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
         <a class="p-2 text-dark" href="/">Главная</a>
 <!--        <a class="p-2 text-dark" href="/item">Товар</a>-->
         <a class="btn btn-outline-primary" href="/create">Добавить товар</a>
+<!--        <a class="btn btn-outline-primary" href="/registration">Зарегистрироватся</a>-->
 
       </nav>
       <a class="btn btn-outline-primary" href="/signin">Войти</a>
