--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}
-  <title>Войти</title>
+  <title>Регистрация</title>
 {% endblock %}
 
-{% block h1 %} <h1 class="display-4 fw-bolder">Войти</h1> {% endblock h1 %}
-{% block p %} <p class="lead fw-normal text-white-50 mb-0">Текст о стр войти</p>{% endblock p %}
+{% block h1 %} <h1 class="display-4 fw-bolder">Зарегистрироваться</h1> {% endblock h1 %}
+{% block p %} <p class="lead fw-normal text-white-50 mb-0">Текст о стр регистрации</p>{% endblock p %}
 
-{% block body %}
-
+{% block content %}
 
 
 <body>
@@ -29,7 +28,6 @@
 
 </body>
 </div>
-
 
 
 {% endblock %}
