--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
 
       </nav>
-           <a class="btn btn-outline-primary" href="/signup">Зарегистрироватся</a>
+           <a class="btn btn-outline-primary" href="/registration">Зарегистрироватся</a>
            <br>
            <a class="btn btn-outline-primary" href="/signin">Войти</a>
     </div>
