--- a/templates/create.html
+++ b/templates/create.html
@@ -17,7 +17,7 @@
 
       <input type="text" name="title" class="form-control" placeholder="Название товара">
       <br>
-      <input type="number" name="price" class="form-control" placeholder="Цена товара" required="">
+      <input type="number" name="price" class="form-control" placeholder="Цена товара">
       <div class="checkbox mb-3">
       </div>
       <button class="btn btn-success" type="submit">Добавить товар</button>
