--- a/templates/registration.html
+++ b/templates/registration.html
@@ -12,16 +12,16 @@
 <body>
 <div class="container">
   <body class="text-center"cz-shortcut-listen="true">
-    <form class="form-signin" method="post">
-      <h1 class="h3 mb-3 font-weight-normal"> </h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus=""><br>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+    <form class="form-signin" method="post" action="/registration/">
+      <h1 class="h3 mb-3 font-weight-normal">регистрация </h1>
+      {{ form.username  }}<br>
+      {{ form.email  }}<br>
+      {{ form.password1  }}<br>
+      {{ form.password2  }}<br>
       <div class="checkbox mb-3">
 
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+      {{ form.submit }}
       <p class="mt-5 mb-3 text-muted"></p>
     </form>
 
