--- a/templates/signin.html
+++ b/templates/signin.html
@@ -13,16 +13,15 @@
 <body>
 <div class="container">
   <body class="text-center"cz-shortcut-listen="true">
-    <form class="form-signin" method="post">
+    <form class="form-signin" method="post" action="/signin/">
       <h1 class="h3 mb-3 font-weight-normal"> </h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus=""><br>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+     {{ form.username }}
+
+      {{ form.password }}
       <div class="checkbox mb-3">
 
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+      {{ form.submit }}
       <p class="mt-5 mb-3 text-muted"></p>
     </form>
 
