--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,25 +10,20 @@
 
 
 
-<body>
+
 <div class="container">
   <body class="text-center"cz-shortcut-listen="true">
     <form class="form-signin" method="post" action="/signin/">
       <h1 class="h3 mb-3 font-weight-normal"> </h1>
-     {{ form.username.label }}
-     {{ form.username }}
-
-      {{ form.password.label }}
-      {{ form.password }}
-      <div class="checkbox mb-3">
-
-      </div>
-      {{ form.submit }}
-      <p class="mt-5 mb-3 text-muted"></p>
+        {{ form.username.label }}<br>
+        {{ form.username }}<br>
+        {{ form.password.label }}<br>
+        {{ form.password }}<br>
+        {{ form.submit }}
     </form>
 
 
-</body>
+
 </div>
 
 
