--- a/templates/base.html
+++ b/templates/base.html
@@ -6,27 +6,21 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        {% block title %}
 
-        {% block title %} {% endblock title %}
+        {% endblock title %}
     </head>
 <body>
 <!-- Navigation-->
-       <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal" >App shop</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/">Главная</a>
-<!--        <a class="p-2 text-dark" href="/item">Товар</a>-->
-        <a class="btn btn-outline-primary" href="/create">Добавить товар</a>
+          <a class="btn btn-outline-primary" href="/">Главная</a>
+          <a class="btn btn-outline-primary" href="/create">Добавить товар</a>
           <a class="btn btn-outline-primary" href="/registration">Зарегистрироватся</a>
           <a class="btn btn-outline-primary" href="/signin">Войти</a>
-
-
       </nav>
-
-
-
     </div>
-
 <!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -38,7 +32,6 @@
         </header>
 
  {% block body %} {% endblock body %}
-
 <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2025</p></div>
